# hallucitron

./: .gitignore  .test_api_keys.example  LICENSE  README.md  providers_default.yaml  pyproject.toml  test_models.yaml
hallucitron/: __init__.py  anthropic_adapt.py  anthropic_non_streaming.py  anthropic_streaming.py  hallu_call.py  hallu_providers.py  hallu_structs.py  openai_adapt.py  openai_non_streaming.py  openai_streaming.py  replay_dumped_request.py  test_python_version.py
rust/: Cargo.toml
rust/src/: anthropic_adapt.rs  anthropic_non_streaming.rs  anthropic_streaming.rs  hallu_providers.rs  hallu_structs.rs  lib.rs  openai_adapt.rs  openai_non_streaming.rs  openai_streaming.rs  test_anthropic.rs  test_data.rs  test_openai.rs  test_xai.rs
testfiles/: make_tokyo_pdf.py
