[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucitron"
version = "0.1.0"
description = "Provider-agnostic structured LLM calling layer for OpenAI, Anthropic, and xAI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "pyyaml>=6",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["hallucitron"]
