[package]
name = "hallucitron"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provider-agnostic structured LLM calling layer for OpenAI, Anthropic, and xAI"
repository = "https://github.com/your-org/hallucitron"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tracing = "0.1"

[dev-dependencies]
dotenvy = "0.15"
